<resources>
    <string name="app_name">ExApply</string>
    <string name="settings">Settings</string>
    <string name="lorem_ipsum">Sugar plum sugar plum gummies donut jelly powder. Icing muffin cheesecake liquorice wafer bonbon. Bonbon tootsie roll halvah. Lollipop macaroon bear claw chocolate cake. Chocolate bar gummi bears candy cheesecake icing oat cake. Cake chocolate cake liquorice pie. Donut halvah lollipop. Bear claw lollipop sweet roll cookie dragée dragée donut candy. Cheesecake liquorice marzipan dragée muffin chocolate dessert jujubes. Cupcake ice cream tootsie roll bonbon croissant gingerbread ice cream danish. Jelly beans donut jujubes sugar plum. Tootsie roll tiramisu chupa chups dragée cheesecake brownie chocolate bar chocolate bar icing. Apple pie cake carrot cake gingerbread candy canes</string>
    <string name="article_detail_more_info">More Info</string>


    <string name="samples_title">Hello title</string>
    <string name="samples_subhead">Hello Subhead</string>
    <string name="samples_hint_username">Username</string>
    <string name="samples_hint_email">E-Mail</string>


    <string name="navigation_title">My navigation title</string>
    <string name="navigation_quotes">Quotes</string>
    <string name="navigation_samples">Samples</string>
    <string name="navigation_settings">Settings</string>
    <string name="navigation_sub_items">Sub items</string>
    <string name="navigation_dummy_item_1">Dummy item 1</string>
    <string name="navigation_dummy_item_2">Dummy item 2</string>

    <string-array name="user_type_array">
        <item>user</item>
        <item>planner</item>
    </string-array>

    <string-array name="categories_array">
        <item>Travel</item>
        <item>Sport</item>
        <item>Charity</item>
        <item>Parties</item>
        <item>Courses</item>
    </string-array>

    <string-array name="privacy_array">
        <item>Public</item>
        <item>Private</item>
    </string-array>

    <string name="drawer_open"></string>
    <string name="drawer_close"></string>

    <string name="password_hint">Password</string>
    <string name="email_hint">Email</string>
    <string name="sign_up_button_label">Sign Up</string>
    <string name="signup_error_message">Please make sure you enter an email address and password!</string>
    <string name="signup_error_title">Error!</string>
    <string name="signup_success">Account successfully created! You can now Login.</string>
    <string name="login_error_message">Please make sure you enter an email address and password!</string>
    <string name="login_error_title">Error!</string>
    <string name="login_button_label">Login</string>
    <string name="sign_up_text">Sign Up!</string>
    <string name="title_activity_login">Sign in</string>
    <string name="add_item">Add New Item</string>
    <string name="action_logout">Logout</string>

    <string name="facebook_app_id">385369898507291</string>
    <string name="fb_login_protocol_scheme">fb385369898507291</string>

    <string name="google_web_client_id">28060075610-nrsv7fe7asc1s1sdq6u0jfkh3a6jc8gr.apps.googleusercontent.com</string>


    <string name="about">Sometimes you read about an interesting event but time and place are not suitable or the ticket\'s cost is too expensive. You get depressed because you are not capable of planning and organizing an event to apply your idea.
ExApply our mobile application will connect you to event planning companies so that they can see your idea and send you proposals to organize the event for you. All you have to do is to choose a company and enjoy your event.</string>


    <string name="eligibility">Eligibility
The Site, Application and Services are intended solely for persons who are 13 or older. If you are under 13, you may use these items ONLY WITH THE INVOLVEMENT of a parent or guardian. Any access to or use of the Site, Application or Services by anyone under 13 is expressly prohibited. By accessing or using the Site, Application or Services you represent and warrant that you are 13 or older.

    </string>
    
    <string name="personal_info_what">“Personal information” means information that specifically identifies an individual (such as a name, address, telephone number, mobile number or e-mail address, birthday, Twitter and/or Facebook usernames) or information about that individual that is directly linked to personally identifiable information. Personal information does not include “aggregate” information, which is data we collect about the use of our site and our services. Our privacy policy does not restrict or limit our collection and use of aggregate information.</string>

    <string name="personal_info_how">How Do We Share your information ?
Information Shared with Everyone: Information such as your name and photo, your events, a list of your friends (following and followers), links to your Twitter and Facebook accounts (if you have connected those accounts to your ExAPPLY account), the posts and comments you write and badges are shared by default with the ExAPPLY community.

Agents: We employ other companies and people to perform tasks on our behalf and need to share your information with them to provide products or services to you. Our agents do not have any right to use Personal Information we share with them beyond what is necessary to assist us, and they provide a comparable level of protection for your Personal Information.

Partners: In addition to the data sharing described above, we enter into relationships with a variety of businesses and work closely with them. In certain situations, these businesses sell items or provide promotions to you through ExAPPLY’ Service. In other situations, ExAPPLY provides services, or sells products jointly with these businesses.

Business Transfer: In the event that ExAPPLY is involved in a bankruptcy, merger, acquisition, reorganization or sale of assets, your information may be sold or transferred as part of that transaction. The promises in this privacy policy will apply to your information as transferred to the new entity.

Protection of ExAPPLY and Others: We may release Personal Information when we believe in good faith that release is necessary to comply with the law, including laws outside your country of residence; enforce or apply our conditions of use and other agreements; or protect the rights, property, or safety of ExAPPLY, our employees, our users, or others. This includes exchanging information with other companies and organizations (including outside of your country of residence) for fraud protection and credit risk reduction.

Non-Private or Non-Personal Information: We may share or disclose your non-private, aggregated or otherwise non-personal information, such as your public events, posts or the number of users who clicked on a particular link (even if only one did).

</string>

    <string name="user_name">Name</string>
    <string name="title">Title</string>
    <string name="location">Location</string>
    <string name="keywords">Keywords</string>
    <string name="max_num">Max. No.</string>
    <string name="min_num">Min. No.</string>
    <string name="date_string">Date</string>
    <string name="time_string">Time</string>
    <string name="send_email">Send Email : </string>
    <string name="contact_us_string">12345678</string>
    <string name="email_string_contact">mm@m.com</string>
    <string name="title_activity_splash">SplashActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="date_error">Please insert date</string>
    <string name="register_success">You Are Registerd Successfully</string>
    <string name="appointement_success">Appointement has been Added SuccessFully</string>
    <string name="contain_image">Please Choose Image</string>
    <string name="query_success">Query has been sent successfully</string>
    <string name="query_fail">fail to send your query</string>
    <string name="appointement_fail">Appointement has been not Added SuccessFully</string>
    <string name="time_error">Please insert time</string>
    <string name="do_you_want_exit">Do You Want To Exit</string>
    <string name="no_internet_connection">No Internet Connection , try again later</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="positive">Yes</string>
    <string name="negative">No</string>
    <string name="write_complain">write here your Query</string>
    <string name="description_string">Description</string>
    <string name="action_settings">Settings</string>
    <string name="male_string">Male</string>
    <string name="female_string">Female</string>
    <string name="you_dont_have_account"> <u>You dont have account ?</u></string>
    <string name="already_account">Already Have Account !</string>
    <string name="wait">Please Wait ...</string>
    <array name="list_array">
        <item>Home (BMI)</item>
        <item>Make Appointment</item>
        <item>Online Consultancy</item>
        <item>News &amp; Events</item>
        <item>About Us</item>
        <item>Contact Us</item>
        <item>Setting</item>
    </array>
    <string name="sign_up">Sign Up</string>
    <string name="sign_in">Sign In</string>
    <string name="send_string">Send</string>
    <string name="profile_string">My Profile</string>
    <string name="history_string">My History</string>
    <string name="menu_string">Menu</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="name_error">Please Enter User Name</string>
    <string name="age_error">Please Enter Age</string>
    <string name="phone_error">Please Enter PhoneNumber</string>
    <string name="email_error">Please Enter Email Address</string>
    <string name="complain_error">Please Enter Your Query</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_news_details">NewsDetailsActivity</string>
    <string name="back">Back</string>
    <string name="types_of_obesity">Types Of Obesity</string>
    <string name="dont_late">Dont late please continue to make appointement</string>
    <string name="types_of_obesity_is">Types Of Obesity is : </string>
    <string name="title_activity_profile">ProfileActivity</string>
    <string name="title_activity_history">HistoryActivity</string>

    <string name="title_activity_register">RegisterActivity</string>
    <string name="mobile_number">Mobile</string>
    <string name="title_activity_intent_forwarding">IntentForwardingActivity</string>
    <string name="title_activity_bmi_result">BmiResultActivity</string>
    <string name="make_appointement">Create Event</string>
    <string name="title_activity_make_appointement">MakeAppointementActivity</string>


    <!-- Material Calendar -->
    <string name="monday">MON</string>
    <string name="tuesday">TUE</string>
    <string name="wednesday">WED</string>
    <string name="thursday">THU</string>
    <string name="friday">FRI</string>
    <string name="saturday">SAT</string>
    <string name="sunday">SUN</string>
    <string name="calendar_previous">previous</string>
    <string name="calendar_next">next</string>
    <string name="saved_event_image">saved event image</string>

</resources>